# C_Programming_Exercise

./: CMakeLists.txt  C_Program_2_exercise.c  C_Program_2_exercise.h  C_Program_2_exsersice.c  C_Program_3_exercise.c  C_Program_3_exercise.h  C_Program_5_exercise.c  C_Program_5_exercise.h  README.md  main.c
